...

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            app:navigationContentDescription="Open drawer"
            app:navigationIcon="@drawable/ic_menu"
            app:navigationIconTint="@android:color/white"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white" />

        <com.google.android.material.button.MaterialButton
...
